--- a/WebApp/about.html
+++ b/WebApp/about.html
@@ -13,42 +13,9 @@
 
     <div class="navbar">
         <a onclick="openNav()"><i class="fa fa-bars"></i></a>
-        <!-- <a href="gallery.html">Gallery</a>
-        <a href="leaderboard.html">Leaderboard</a>
-        <div class="dropdown">
-            <button class="dropbtn">Info
-                <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact</a>
-            </div>
-        </div>
-        <div class="right-nav">
-            <a href="profile.html"><i class="fa fa-user"></i></a>
-            <a href="login.html">Login / Logout</a>
-        </div> -->
     </div>
-    <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="index.html">Home</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="leaderboard.html">Leaderboard</a>
-        <div class="dropdown">
-            <a class="dropbtn" onmouseover="overDropdown(this)" onmouseout="outDropdown(this)">Info
-                <i class="fa fa-caret-down"></i>
-            </a>
-            <div class="dropdown-content" id="dropdown-content" onmouseover="overDropdown(this)" onmouseout="outDropdown(this)">
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact</a>
-            </div>
-        </div>
-        <div class="bottom-nav">
-            <hr>
-            <a href="profile.html"><i class="fa fa-user"></i></a>
-            <a href="login.html">Login / Logout</a>
-        </div>
-      </div>
+    <div id="nav"></div>
+
 </head>
 
 <body>
