--- a/WebApp/login.html
+++ b/WebApp/login.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <script src="./javascript/site.js"></script>
 
 
     <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
@@ -14,23 +15,9 @@
 
     <a class="logo" href="index.html"><img src="imgs/Eoin's.png" alt="Eoin's Gallery Logo" href="index.html"></a>
     <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="leaderboard.html">Leaderboard</a>
-        <div class="dropdown">
-            <button class="dropbtn">Info
-                <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact</a>
-            </div>
-        </div>
-        <div class="right-nav">
-            <a href="profile.html"><i class="fa fa-user"></i></a>
-            <a href="login.html">Login / Logout</a>
-        </div>
+        <a onclick="openNav()"><i class="fa fa-bars"></i></a>
     </div>
+    <div id="nav"></div>
 </head>
 
 <body>
@@ -56,55 +43,91 @@
             <div class="container">
                 <div class="input-control">
 
-                <label for="username"><b>Username</b></label>
-                <input id="username" type="text" placeholder="Username" name="username" >
-                <div class="error"></div>
+                    <label for="username"><b>Username</b></label>
+                    <input id="username" type="text" placeholder="Username" name="username" type="username" onfocus="setSuggestion(this,'James123')" onblur="resetSuggestion(this)">
+                    <div class="error"></div>
                 </div>
-                <label for="firstName"><b>First Name</b></label>
-                <input id="firstName" type="text" placeholder="First Name" name="firstName" >
-                <div class="error"></div>
+                <div class="input-control">
 
+                    <label for="firstName"><b>First Name</b></label>
+                    <input id="firstName" type="text" placeholder="First Name" name="firstName" onfocus="setSuggestion(this,'James')" onblur="resetSuggestion(this)">
+                    <div class="error"></div>
+                </div>
+                <div class="input-control">
 
-                <label for="secondName"><b>Second Name</b></label>
-                <input id="secondName" type="text" placeholder="Second Name" name="secondName" >
+                    <label for="secondName"><b>Second Name</b></label>
+                    <input id="secondName" type="text" placeholder="Second Name" name="secondName" onfocus="setSuggestion(this,'Murphy')" onblur="resetSuggestion(this)">
+                    <div class="error"></div>
 
-                <label for="email"><b>Email</b></label>
-                <input id="email" type="email" placeholder="someone@example.com" name="email" >
+                </div>
+                <div class="input-control">
+                    <label for="email"><b>Email</b></label>
+                    <input id="email" type="email" placeholder="someone@example.com" name="email" onfocus="setSuggestion(this,'Jamesmurphy@gmail.com')" onblur="resetSuggestion(this)">
+                    <div class="error"></div>
 
-                <label for="phone">Enter your phone number:</label>
-                <input id="phone" type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+                </div>
+                <div class="input-control">
+                    <label for="phone">Enter your phone number:</label>
+                    <input id="phone" type="tel" id="phone" name="phone" onfocus="setSuggestion(this,'086 123 4567')" onblur="resetSuggestion(this)">
+                    <div class="error"></div>
 
+                </div>
+                <div class="input-control">
 
-                <label for="dob"><b>Date of Birth</b></label>
-                <input id="dob" type="date" name="dob" >
+                    <label for="dob"><b>Date of Birth</b></label>
+                    <input id="dob" type="date" name="dob" onfocus="setSuggestion(this,'12/03/2000')" onblur="resetSuggestion(this)">
+                    <div class="error"></div>
 
-                <label for="gender"><b>Gender</b></label>
-                <select id="gender" name="gender">
-                    <option value="Male">Male</option>
-                    <option value="Female">Female</option>
-                    <option value="NA">Rather not say</option>
-                </select>
+                </div>
+                <div class="input-control">
+                    <label for="gender"><b>Gender</b></label>
+                    <select id="gender" name="gender">
+                        <option value="Male">Male</option>
+                        <option value="Female">Female</option>
+                        <option value="NA">Rather not say</option>
+                    </select>
+                    <div class="error"></div>
 
-                <label for="address1"><b>Address line 1</b></label>
-                <input id="address1" type="text" placeholder="Address line 1" name="address1" >
+                </div>
+                <div class="input-control">
+                    <label for="address1"><b>Address line 1</b></label>
+                    <input id="address1" type="text" placeholder="Address line 1" name="address1" onfocus="setSuggestion(this,'123 Yellow Road Dublin Ireland')" onblur="resetSuggestion(this)">
+                    <div class="error"></div>
 
-                <label for="address2"><b>Address line 2</b></label>
-                <input id="address2" type="text" placeholder="Address line 2" name="address2" >
+                </div>
+                <div class="input-control">
+                    <label for="address2"><b>Address line 2</b></label>
+                    <input id="address2" type="text" placeholder="Address line 2" name="address2">
+                    <div class="error"></div>
 
-                <label for="country"><b>Country</b></label>
-                <input id="country" type="text" placeholder="Country" name="country" >
+                </div>
+                <div class="input-control">
+                    <label for="country"><b>Country</b></label>
+                    <input id="country" type="text" placeholder="Country" name="country" onfocus="setSuggestion(this,'Ireland')" onblur="resetSuggestion(this)">
+                    <div class="error"></div>
 
-                <label for="password"><b>Password</b></label>
-                <input id="password" type="text" placeholder="Passowrd" name="password" >
+                </div>
+                <div class="input-control">
+                    <label for="password"><b>Password</b></label>
+                    <input id="password" type="text" placeholder="Passowrd" name="password">
+                    <div class="error"></div>
 
-                <label for="confirmPassword"><b>Confirm Password</b></label>
-                <input id="confirmPassword" type="text" placeholder="Confirm Password" name="confirmPassword" >
+                </div>
+                <div class="input-control">
+                    <label for="confirmPassword"><b>Confirm Password</b></label>
+                    <input id="confirmPassword" type="text" placeholder="Confirm Password" name="confirmPassword">
+                    <div class="error"></div>
 
+                </div>
                 <button type="submit">Login</button>
-
             </div>
         </form>
+        <button onclick="loginTable()"> Print Table</button>
     </div>
+        <div id="loginTable">
+
+        </div>
+
     <footer>
         <div class="info">
             <ul>
