--- a/WebApp/profile.html
+++ b/WebApp/profile.html
@@ -5,28 +5,16 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/profile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="./javascript/site.js"></script>
 
     <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
     <a class="logo" href="index.html"><img src="imgs/Eoin's.png" alt="Eoin's Gallery Logo" href="index.html"></a>
     <title>Eoin's Gallary</title>
     <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="leaderboard.html">Leaderboard</a>
-        <div class="dropdown">
-            <button class="dropbtn">Info
-                <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact</a>
-            </div>
-        </div>
-        <div class="right-nav">
-            <a href="profile.html"><i class="fa fa-user"></i></a>
-            <a href="login.html">Login / Logout</a>
-        </div>
+        <a onclick="openNav()"><i class="fa fa-bars"></i></a>
     </div>
+    <div id="nav"></div>
+
 </head>
 
 <body>
